/*
 * Copyright 2018- The Pixie Authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package px.stirling.tableenums.cqlpb;

// enum ReqOp provides the encoding used in the cql_events::req_op column.
// The encodings are the same as from CQL spec.
enum ReqOp {
  // Proto3 requires first enum value to be zero.
  UNUSED = 0x00;
  Startup = 0x01;
  AuthResponse = 0x0f;
  Options = 0x05;
  Query = 0x07;
  Prepare = 0x09;
  Execute = 0x0a;
  Batch = 0x0d;
  Register = 0x0b;
}

// enum RespOp provides the encoding used in the cql_events::resp_op column.
// The encodings are the same as from CQL spec.
enum RespOp {
  Error = 0x00;
  Ready = 0x02;
  Authenticate = 0x03;
  Supported = 0x06;
  Result = 0x08;
  Event = 0x0c;
  AuthChallenge = 0x0e;
  AuthSuccess = 0x10;
}
